fix cover images z-index

--- a/assets/src/style/global.scss
+++ b/assets/src/style/global.scss
@@ -764,13 +764,13 @@ h2.section-title {
     background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
-    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: -3;
 }
 .Chrome, .Opera {
     .cover-clip {
@@ -779,6 +779,7 @@ h2.section-title {
         -webkit-mask-image: -webkit-linear-gradient(top, #ffffff 0%,#ffffff 100%);
     }
     .cover-img {
+        position: fixed;
         background-attachment: scroll;
         -webkit-transform-style: preserve-3d;
     }
